Some mobile fixes
Added a custom media for devices smaller than 335px (such as iPhone 4) as the main body in page editing was not visible

--- a/themes/grav/scss/template/_admin.scss
+++ b/themes/grav/scss/template/_admin.scss
@@ -503,6 +503,10 @@ $sidebar-padding: 2rem;
                     margin-right: 0;
                 }
             }
+            
+            @media only all and (max-width: 20.875em) {
+                padding: 0.5rem 0.2rem;
+            }
         }
     }
 
@@ -727,7 +731,7 @@ $sidebar-padding: 2rem;
             position: absolute;
             width: 100%;
             text-align: center;
-            font-size: 1.7rem;
+            font-size: 1.5rem;
             line-height: 1;
             @extend %vertical-align;
 
